# 2021Wanxiang-Blockchain-Hackathon-DmailNetwork

./: Cargo.toml  README.md  canister_ids.json  craco.config.js  dfx.json  package.json  tsconfig.json
backend/: Cargo.toml  address.rs  alias.rs  backend.did  lib.rs  types.rs
public/: index.html  manifest.json
src/: App.css  App.tsx  authProvider.ts  emailReducer.ts  index.css  index.tsx  themeReducer.ts  types.ts
src/asset/: Totals.tsx  assetCreate.tsx  assetList.tsx  assetShow.tsx  index.ts
src/components/: BulkActionButtons.tsx  GetEmail.tsx  dropDown.tsx  empty.tsx  pagination.tsx  show.tsx
src/configuration/: Configuration.tsx  actions.ts
src/dashboard/: Dashboard.tsx  Welcome.tsx
src/dataProvider/: graphql.ts  index.ts  rest.ts
src/datas/: assets.ts  coinlist.json  commands.ts  customers.ts  finalize.ts  index.ts  junks.ts  mails.ts  nfts.ts  projects.ts  sents.ts  trashs.ts
src/fakeServer/: graphql.ts  rest.ts
src/i18n/: en.ts  fr.ts
src/inbox/: AttachList.tsx  InboxCreate.tsx  InboxList.tsx  InboxShow.tsx  Toolbar.tsx  index.ts
src/junk/: index.ts  junkList.tsx  junkShow.tsx
src/layout/: AppBar.tsx  Layout.tsx  Login.tsx  Logo.tsx  Menu.tsx  SubMenu.tsx  redTheme.ts  utils.ts
src/nft/: content.tsx  index.ts  modal.tsx  nftList.tsx  nftShow.tsx  page.tsx  utils.ts
src/products/: GridList.tsx
src/projects/: NbItemsField.tsx  index.ts  projectList.tsx  projectShow.tsx
src/sent/: Totals.tsx  index.ts  sentList.tsx  sentShow.tsx
src/service/: authClient.ts  config.ts  index.ts
src/settings/: email.tsx  index.ts  settingsShow.tsx  (+1 more)
(+9 files in other folders)
