[package]
name = "backend"
version = "0.6.0"
authors = ["contact <contact@dmail.ai>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
candid = "0.7.4"
ic-types = "0.2.1"
base64 = "0.13.0"
ic-cdk = "0.3.1"
ic-cdk-macros = "0.3.0"
ic-certified-map = "0.1.0"
num-traits = "0.2.14"
libflate = "1"
serde = "1.0.115"
serde_bytes = "0.11"
lettre = "0.9"
lettre_email = "0.9"